2005-12-22  Guillaume Smet <guillaume-pg@smet.org>

	* more work on graphs
	* tagged RELEASE_0_3 even if it is not an official release
	before major parser changes

2005-12-21  Guillaume Smet <guillaume-pg@smet.org>

	* worked on graphs for hourly reports
	* added all the command line stuff to manage graphs

2005-12-20  Guillaume Smet <guillaume-pg@smet.org>

	* added Artichow library to draw graphs

2005-12-19  Guillaume Smet <guillaume-pg@smet.org>

	* applied patch from Laurent Almeras to add -from and -to
	options (ability to filter on timestamps)
	* worked on hourly statistics (no pretty output yet)

2005-12-18  Guillaume Smet <guillaume-pg@smet.org>

	* enhanced the syslog parser to get log line timestamps
	* added the ability to get the timestamp of a query

2005-12-16  Guillaume Smet <guillaume-pg@smet.org>

	* fixed a few bugs
	* released 0.2

2005-11-28  Guillaume Smet <guillaume-pg@smet.org>

	* applied [#1000450] from Laurent Almeras

2005-11-24  Guillaume Smet <guillaume-pg@smet.org>

	* optimized the parsers
	* improved html error report and fixed text error report

2005-11-23  Guillaume Smet <guillaume-pg@smet.org>

	* added a Profiler class
	* updated the Profiler test case
	* implemented the Profiler in the parsers
	* optimized the parsers

2005-11-22  Guillaume Smet <guillaume-pg@smet.org>

	* added the Profiler test case
	* added the -profile option to command line
	* added the -examples option to command line

2005-11-21  Guillaume Smet <guillaume-pg@smet.org>

	* pgFouine should now work with PostgreSQL 8 log prefix feature
	* added the -onlyselect option to command line
	* added config functions
	* preliminary work on error reports
	* ignored more common LOG: lines which should not raise an error
	* fixed references to listeners in reports

2005-11-20  Guillaume Smet <guillaume-pg@smet.org>
	
	* improved SQL highlighting by adding PostgreSQL specific functions
	* added the ability to choose reports generated
