@@ -42,24 +42,13 @@ class PostgreSQLContextLine extends PostgreSQLLogLine {
 		}
 	}
 
-	function appendTo(& $queries) {
-		$lastQuery =& $queries->last();
-		if(is_a($lastQuery, 'ErrorQuery')) {
+	function appendTo(& $logObject) {
+		if(is_a($logObject, 'ErrorLogObject')) {
 			// we have an error query so we put the context in a subquery
-			$lastQuery->setSubQuery($this->text);
+			$lastLogObject->addContext($this->text);
 		} else {
 			if(DEBUG && !$this->recognized) stderr('Unrecognized context or context for an error', true);
-			
-			$subQuery =& $queries->pop();
-			$query =& $queries->last();
-			
-			if(!$subQuery) {
-				stderr('Missing query for context', true);
-			} elseif($query) {
-				$query->setSubQuery($subQuery->getText());
-			} else {
-				stderr('Context for no previous query', true);
-			}
+			$logObject->addContext($this->text);
 		}
 		return false;
 	}
