@@ -25,19 +25,11 @@ class PostgreSQLContinuationLine extends PostgreSQLLogLine {
 	var $ignore = false;
 
 	function PostgreSQLContinuationLine($text, $duration = false) {
-		$this->PostgreSQLLogLine(str_replace('^I', "\t", $text));
-	}
-
-	function appendTo(& $queries) {
-		$query =& $queries->last();
-		if($query && ($query->getCommandNumber() == $this->commandNumber)) {
-			if(substr(trim($this->text), 0, 2) != '--') {
-				$query->append($this->text);
-			}
-		} else {
-			stderr('Continuation for no previous query', true);
+		$text = str_replace('^I', "\t", $text);
+		if(substr(trim($text), 0, 2) == '--') {
+			$text = false;
 		}
-		return false;
+		$this->PostgreSQLLogLine($text);
 	}
 }
 
