@@ -24,14 +24,8 @@
 class PostgreSQLStatementLine extends PostgreSQLQueryStartLine {
 	var $ignore = false;
 
-	function appendTo(& $queries) {
-		$error =& $queries->last();
-		if($error) {
-			$error->appendStatement($this->text);
-		} else {
-			stderr('Statement for no previous error', true);
-		}
-		return false;
+	function appendTo(& $logObject) {
+		$logObject->appendStatement($this->text);
 	}
 }
 
